--- a/package.json
+++ b/package.json
@@ -20,25 +20,14 @@
     {
                         "media-typer":          "0.2.0",
                         "raw-body":             "1.2.2",
-                        "underscore":           "1.6.0",
-                        "cadence":              "0.0.52",
+                        "cadence":              "0.0.53",
                         "connect":              "3.0.1",
-                        "quip":                 "0.1.2",
-                        "dispatch":             "1.0.0",
                         "errorhandler":         "1.1.1",
-                        "body-parser":          "1.4.3",
-                        "turnstile":            "0.0.5",
-                        "magazine":             "0.0.12",
-                        "node-uuid":            "1.4.1",
-                        "accum":                "0.3.6",
-                        "utf8-stream":          "0.0.0",
-                        "through":              "2.3.6",
-                        "staccato":             "0.0.5",
-                        "newrelic":             ">= 1.11.3"
+                        "body-parser":          "1.4.3"
     },
     "devDependencies":
     {
-                        "proof":                "0.0.50"
+                        "proof":                "0.0.51"
     },
     "scripts":
     {
