--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "devDependencies":
     {
-                        "delta":                "0.0.4",
+                        "delta":                "1.0.x",
                         "cadence":              "0.4.0",
                         "proof":                "0.0.54"
     },
