--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     {
                         "delta":                "1.0.x",
                         "cadence":              "1.0.x",
-                        "proof":                "0.0.54"
+                        "proof":                "1.0.x"
     },
     "scripts":
     {
