--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "main":                 "semblance",
     "scripts":
     {
-                            "test": "proof platform win32 && proof test */*/*.t.js || t/test"
+                            "test": "proof platform win32 && proof test */*.t.js || t/test"
     }
 }
