--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "repository":
     {
                             "type": "git",
-                            "url": "http://github.com/bigeasy/semblance.git"
+                            "url": "bigeasy/semblance"
     },
     "dependencies":
     {
