--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
+/.nyc_output
 /.wiseguy
+/coverage
 /docs
 /node_modules
-/.proof.out
-/coverage
-/t/tmp
-/t/fixtures/certs/*.pem
-/t/fixtures/certs/*.srl
-/t/fixtures/certs/ca2-database.txt*
-/t/fixtures/certs/ca2-serial
-/linux/configuration.sh
-.DS_Store
-.vagrant
